--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,7 +43,7 @@ services:
     ports:
       - '3000:3000'
     depends_on:
-      - backend
+      - digital-world-shop-api
 
 volumes:
   mongodb-data:
